Add reminders, pagination, reviews overhaul, calendar; security hardening