@@ -1,9 +1,14 @@
 package com.healthpro.doctorappointment.service;
 
+import com.healthpro.doctorappointment.dto.PageResponse;
 import com.healthpro.doctorappointment.model.Doctor;
 import com.healthpro.doctorappointment.model.Hospital;
 import com.healthpro.doctorappointment.repository.DoctorRepository;
 import com.healthpro.doctorappointment.repository.HospitalRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
@@ -14,41 +19,53 @@ public class HospitalService {
 
     private final HospitalRepository hospitalRepository;
     private final DoctorRepository doctorRepository;
+    private final ReviewService reviewService;
 
-    public HospitalService(HospitalRepository hospitalRepository, DoctorRepository doctorRepository) {
+    public HospitalService(HospitalRepository hospitalRepository, DoctorRepository doctorRepository,
+                           ReviewService reviewService) {
         this.hospitalRepository = hospitalRepository;
         this.doctorRepository = doctorRepository;
+        this.reviewService = reviewService;
     }
 
-    public List<Hospital> getHospitals(String city, String search) {
+    public PageResponse<Hospital> getHospitals(String city, String search, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("name").ascending());
+        Page<Hospital> result;
         if (city != null && !city.isEmpty() && search != null && !search.isEmpty()) {
-            return hospitalRepository.findByCityAndNameContainingIgnoreCaseAndActiveTrue(city, search);
+            result = hospitalRepository.findByCityAndNameContainingIgnoreCaseAndActiveTrue(city, search, pageable);
         } else if (city != null && !city.isEmpty()) {
-            return hospitalRepository.findByCityAndActiveTrue(city);
+            result = hospitalRepository.findByCityAndActiveTrue(city, pageable);
         } else if (search != null && !search.isEmpty()) {
-            return hospitalRepository.findByNameContainingIgnoreCaseAndActiveTrue(search);
+            result = hospitalRepository.findByNameContainingIgnoreCaseAndActiveTrue(search, pageable);
+        } else {
+            result = hospitalRepository.findByActiveTrue(pageable);
         }
-        return hospitalRepository.findByActiveTrue();
+        return PageResponse.from(result, h -> h);
     }
 
     public Optional<Hospital> getHospitalById(String id) {
         return hospitalRepository.findById(id);
     }
 
-    public List<Map<String, Object>> getDoctorsByHospital(String hospitalId, String search, String specialization) {
-        List<Doctor> doctors;
+    public PageResponse<Map<String, Object>> getDoctorsByHospital(String hospitalId, String search,
+                                                                  String specialization, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("name").ascending());
+        Page<Doctor> result;
         if (search != null && !search.isEmpty() && specialization != null && !specialization.isEmpty()) {
-            doctors = doctorRepository.findByHospitalIdAndNameContainingIgnoreCaseAndSpecializationContainingIgnoreCase(
-                    hospitalId, search, specialization);
+            result = doctorRepository.findByHospitalIdAndNameContainingIgnoreCaseAndSpecializationContainingIgnoreCase(
+                    hospitalId, search, specialization, pageable);
         } else if (search != null && !search.isEmpty()) {
-            doctors = doctorRepository.findByHospitalIdAndNameContainingIgnoreCase(hospitalId, search);
+            result = doctorRepository.findByHospitalIdAndNameContainingIgnoreCase(hospitalId, search, pageable);
         } else if (specialization != null && !specialization.isEmpty()) {
-            doctors = doctorRepository.findByHospitalIdAndSpecializationContainingIgnoreCase(hospitalId, specialization);
+            result = doctorRepository.findByHospitalIdAndSpecializationContainingIgnoreCase(hospitalId, specialization, pageable);
         } else {
-            doctors = doctorRepository.findByHospitalId(hospitalId);
+            result = doctorRepository.findByHospitalId(hospitalId, pageable);
         }
 
-        return doctors.stream().map(this::doctorToPublicMap).collect(Collectors.toList());
+        // Single batch lookup for all doctor aggregates on this page (was N+1).
+        List<String> doctorIds = result.getContent().stream().map(Doctor::getId).toList();
+        Map<String, ReviewService.AggregateRating> aggregates = reviewService.aggregatesForDoctors(doctorIds);
+        return PageResponse.from(result, doctor -> doctorToPublicMap(doctor, aggregates.get(doctor.getId())));
     }
 
     public List<String> getDistinctCities() {
@@ -61,7 +78,7 @@ public class HospitalService {
                 .collect(Collectors.toList());
     }
 
-    private Map<String, Object> doctorToPublicMap(Doctor doctor) {
+    private Map<String, Object> doctorToPublicMap(Doctor doctor, ReviewService.AggregateRating preloadedAggregate) {
         Map<String, Object> map = new LinkedHashMap<>();
         map.put("id", doctor.getId());
         map.put("name", doctor.getName());
@@ -75,15 +92,11 @@ public class HospitalService {
         map.put("about", doctor.getAbout());
         map.put("hospitalId", doctor.getHospitalId());
 
-        // Average rating
-        if (doctor.getRating() != null && !doctor.getRating().isEmpty()) {
-            double avg = doctor.getRating().stream().mapToInt(r -> r.getRate()).average().orElse(0);
-            map.put("averageRating", Math.round(avg * 10.0) / 10.0);
-            map.put("totalReviews", doctor.getRating().size());
-        } else {
-            map.put("averageRating", 0);
-            map.put("totalReviews", 0);
-        }
+        ReviewService.AggregateRating agg = preloadedAggregate != null
+                ? preloadedAggregate
+                : reviewService.aggregateForDoctor(doctor.getId());
+        map.put("averageRating", agg.average());
+        map.put("totalReviews", agg.total());
         return map;
     }
 }
